test/errors/return_outside_function.sl
# expect: COMPERROR
return 1;
